feat(sync): implementar pull incremental 3.5
